fix docker config dev/prod for db